Add a new task of type Zip to make an archive of the sources of the application. Fixes #7

--- a/CA2/Part1/build.gradle
+++ b/CA2/Part1/build.gradle
@@ -103,3 +103,9 @@ task backupSources(type: Copy) {
     from 'src'
     into 'backup'
 }
+task archiveSources(type: Zip) {
+    archiveFileName = 'sourceArchive.zip'
+
+    from 'src'
+}
+
