Add a task to gradle to delete all the files generated by webpack, which should be executed before the task clean. Fixes  #11

--- a/CA2/Part2/react-and-spring-data-rest-basic/build.gradle
+++ b/CA2/Part2/react-and-spring-data-rest-basic/build.gradle
@@ -45,3 +45,12 @@ task copyJarToDist(type: Copy) {
 
 assemble.finalizedBy(copyJarToDist)
 
+// Define a task to delete webpack generated files
+task deleteWebpackGeneratedFiles {
+	doLast {
+		delete fileTree(dir: 'src/main/resources/static/built/', include: '**/*')
+	}
+}
+
+// Ensure deleteWebpackGeneratedFiles runs before the clean task
+clean.dependsOn deleteWebpackGeneratedFiles
