--- a/CA2/Part2/react-and-spring-data-rest-basic/build.gradle
+++ b/CA2/Part2/react-and-spring-data-rest-basic/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '3.2.4'
 	id 'io.spring.dependency-management' version '1.1.4'
 	id "org.siouan.frontend-jdk17" version "8.0.0"
+	id 'war'
 }
 
 group = 'com.greglturnquist'
@@ -24,6 +25,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.2')
 	testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.7.2')
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 }
 
 tasks.named('test') {
