--- a/CA5/Jenkins2/Jenkinsfile
+++ b/CA5/Jenkins2/Jenkinsfile
@@ -94,7 +94,7 @@ pipeline {
             steps {
                 script {
                     echo 'Building and publishing Docker image...'
-                    def dockerImage = docker.build("joaoa/react-and-spring-data-rest-basic:${env.BUILD_ID}", "-f ./ca5/Dockerfile .")
+                    def dockerImage = docker.build("joaoa/react-and-spring-data-rest-basic:${env.BUILD_ID}", "-f ./CA5/Jenkins2/Dockerfile .")
                     docker.withRegistry('https://index.docker.io/v1/', 'docker-id') {
                         dockerImage.push()
                     }
